fix broken style

--- a/css/trailTails.css
+++ b/css/trailTails.css
@@ -235,38 +235,38 @@ h6 {
 }
 
 @media only screen and (max-width: 1280px) {
-  #trailList .hero h2 {
+  .hero h2 {
     font-size: 26px;
   }
-  #trailList .hero article {
+  .hero article {
     width: 33%;
   }
 }
 
 @media only screen and (max-width: 1100px) {
-  #trailList .hero article {
+  .hero article {
     width: 45%;
     right: 5%;
   }
 }
 
 @media only screen and (max-width: 860px) {
-  #trailList .hero {
+  .hero {
     background-size: contain;
     background-repeat: no-repeat;
   }
-  #trailList .hero h1 {
+  .hero h1 {
     width: 100%;
     font-size: 52px;
     padding: 5%;
   }
-  #trailList .hero h2 {
+  .hero h2 {
     background: #3C5148;
     font-size: 18px;
     line-height: 1.5;
     padding: 24px;
   }
-  #trailList .hero article {
+  .hero article {
     width: 90%;
     right: 5%;
     left: 5%;
